[package]
name = "conventional_commit_parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
thiserror = "1.0.28"

[dev-dependencies]
spectral = "0.6.0"
indoc = "1.0.3"

