[package]
name = "conventional_commit_parser"
version = "0.2.0"
edition = "2018"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/oknozor/conventional_commits_parser_rs"
documentation = "https://docs.rs/conventional_commit_parser"
description="""
A rust implementation of the conventional commit specification.
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"

[dev-dependencies]
spectral = "0.6.0"
indoc = "1.0.3"
assert-panic = "1.0.1"

